@@ -1,14 +1,21 @@
 package dev.ipsych0.myrinnia.entities.creatures;
 
 import dev.ipsych0.myrinnia.Handler;
+import dev.ipsych0.myrinnia.entities.Buff;
+import dev.ipsych0.myrinnia.entities.Condition;
 import dev.ipsych0.myrinnia.entities.Entity;
+import dev.ipsych0.myrinnia.gfx.Assets;
+import dev.ipsych0.myrinnia.items.ui.ItemSlot;
 import dev.ipsych0.myrinnia.pathfinding.AStarMap;
 import dev.ipsych0.myrinnia.pathfinding.CombatState;
 import dev.ipsych0.myrinnia.pathfinding.Node;
 import dev.ipsych0.myrinnia.tiles.Tiles;
+import dev.ipsych0.myrinnia.utils.Text;
 
 import java.awt.*;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Iterator;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 
@@ -59,12 +66,15 @@ public abstract class Creature extends Entity {
     protected List<Node> nodes;
     protected int pathFindRadiusX = 576, pathFindRadiusY = 576;
     protected AStarMap map = new AStarMap(this, (int) xSpawn - pathFindRadiusX, (int) ySpawn - pathFindRadiusY, pathFindRadiusX * 2, pathFindRadiusY * 2, xSpawn, ySpawn);
+    protected boolean aStarInitialized;
     protected Color pathColour = new Color(44, 255, 12, 127);
     private int stuckTimerX = 0, stuckTimerY = 0;
     private int lastX = (int) x, lastY = (int) y;
     private static final int TIMES_PER_SECOND = 4;
     private int timePerPathCheck = (60 / TIMES_PER_SECOND); // 4 times per second.
     private int pathTimer = 0;
+    private List<Condition> conditions = new CopyOnWriteArrayList<>();
+    private List<Buff> buffs = new CopyOnWriteArrayList<>();
 
     public enum Direction {
         UP, DOWN, LEFT, RIGHT
@@ -199,11 +209,7 @@ public abstract class Creature extends Entity {
                     walkableOnTop = true;
             }
         }
-        if (walkableOnTop) {
-            return false;
-        } else {
-            return true;
-        }
+        return !walkableOnTop;
     }
 
     /**
@@ -220,6 +226,29 @@ public abstract class Creature extends Entity {
         name[0] = hoveringEntity.getClass().getSimpleName() + " (level-" + getCombatLevel() + ")";
         name[1] = "Health: " + String.valueOf(health) + "/" + String.valueOf(maxHealth);
         return name;
+    }
+
+    /**
+     * Draws an Entity's information to an overlay at the top of the screen
+     *
+     * @param hoveringEntity
+     * @param g
+     */
+    public void drawEntityOverlay(Entity hoveringEntity, Graphics g) {
+        int yPos = 12;
+        g.drawImage(Assets.chatwindow, Handler.get().getWidth() / 2 - 100, 1, 200, 50, null);
+        for (int i = 0; i < getEntityInfo(hoveringEntity).length; i++) {
+            Text.drawString(g, getEntityInfo(hoveringEntity)[i], Handler.get().getWidth() / 2, yPos + (14 * i), true, Color.YELLOW, Assets.font14);
+        }
+        for (int i = 0; i < conditions.size(); i++) {
+            conditions.get(i).render(g, Handler.get().getAbilityManager().getAbilityHUD().getBounds().x + (i * ItemSlot.SLOTSIZE), 50);
+        }
+
+        int yOffset = 0;
+        if (!conditions.isEmpty()) yOffset = 1;
+        for (int i = 0; i < buffs.size(); i++) {
+            buffs.get(i).render(g, Handler.get().getAbilityManager().getAbilityHUD().getBounds().x + (i * ItemSlot.SLOTSIZE), 50 + (ItemSlot.SLOTSIZE * yOffset));
+        }
     }
 
     @Override
@@ -251,6 +280,12 @@ public abstract class Creature extends Entity {
                 if (p.getCollisionBounds(0, 0).intersects(e.getCollisionBounds(0, 0)) && p.active) {
                     if (e.equals(Handler.get().getPlayer())) {
                         e.damage(DamageType.DEX, this, e);
+
+                        int dice = Handler.get().getRandomNumber(0, 5);
+                        if (dice == 1) {
+                            e.addCondition(this, e, new Condition(Condition.Type.POISON, e, 5, 3));
+                        }
+
                         p.active = false;
                     }
                     if (!e.isAttackable()) {
@@ -267,6 +302,16 @@ public abstract class Creature extends Entity {
         }
 
         projectiles.removeAll(deleted);
+    }
+
+    public void tick() {
+        if (!aStarInitialized) {
+            map.init();
+            aStarInitialized = true;
+        }
+        radius = new Rectangle((int) x - xRadius, (int) y - yRadius, xRadius * 2, yRadius * 2);
+        tickProjectiles();
+        combatStateManager();
     }
 
     /*
@@ -312,12 +357,11 @@ public abstract class Creature extends Entity {
 
     }
 
-    protected void findPath(){
-        if(state == CombatState.BACKTRACK){
+    protected void findPath() {
+        if (state == CombatState.BACKTRACK) {
             nodes = map.findPath((int) ((x + 8) / 32) - (int) (xSpawn - pathFindRadiusX) / 32, (int) ((y + 8) / 32) - (int) (ySpawn - pathFindRadiusY) / 32,
                     (int) Math.round(((xSpawn + 8) / 32)) - (int) (xSpawn - pathFindRadiusX) / 32, (int) Math.round(((ySpawn + 8) / 32)) - (int) (ySpawn - pathFindRadiusY) / 32);
-        }
-        else {
+        } else {
             int playerX = (int) Math.round(((Handler.get().getPlayer().getX() + 0) / 32)) - (int) (xSpawn - pathFindRadiusX) / 32;
             int playerY = (int) Math.round(((Handler.get().getPlayer().getY() + 4) / 32)) - (int) (ySpawn - pathFindRadiusY) / 32;
 
@@ -382,10 +426,10 @@ public abstract class Creature extends Entity {
             state = CombatState.BACKTRACK;
         }
 
-        if(state == CombatState.PATHFINDING || state == CombatState.BACKTRACK){
+        if (state == CombatState.PATHFINDING || state == CombatState.BACKTRACK) {
             // Control the number of times we check for new path
             pathTimer++;
-            if(pathTimer >= timePerPathCheck) {
+            if (pathTimer >= timePerPathCheck) {
                 findPath();
                 pathTimer = 0;
             }
@@ -411,7 +455,7 @@ public abstract class Creature extends Entity {
             return;
         }
 
-        Node next = ((LinkedList<Node>) nodes).getFirst();
+        Node next = nodes.get(0);
 
         // Store the current X & Y position to check if the entity is stuck
         int currentX = (int) x;
@@ -449,8 +493,8 @@ public abstract class Creature extends Entity {
             xMove = (next.getX() < (int) ((x + 8) / 32) ? -speed : speed);
             if (x % 32 == 8) {
                 //x -= x % 32;
-                if (!((LinkedList<Node>) nodes).isEmpty())
-                    ((LinkedList<Node>) nodes).removeFirst();
+                if (!nodes.isEmpty())
+                    nodes.remove(0);
 
                 stuckTimerX = 0;
                 yMove = 0;
@@ -461,15 +505,15 @@ public abstract class Creature extends Entity {
             yMove = (next.getY() < (int) ((y + 8) / 32) ? -speed : speed);
             if (y % 32 == 8) {
                 //y -= y % 32;
-                if (!((LinkedList<Node>) nodes).isEmpty())
-                    ((LinkedList<Node>) nodes).removeFirst();
+                if (!nodes.isEmpty())
+                    nodes.remove(0);
 
                 stuckTimerY = 0;
                 xMove = 0;
             }
         }
 
-        if(xMove != 0 || yMove != 0){
+        if (xMove != 0 || yMove != 0) {
             move();
         }
     }
@@ -612,5 +656,21 @@ public abstract class Creature extends Entity {
 
     public void setLastFaced(Direction lastFaced) {
         this.lastFaced = lastFaced;
+    }
+
+    public List<Condition> getConditions() {
+        return conditions;
+    }
+
+    public void setConditions(List<Condition> conditions) {
+        this.conditions = conditions;
+    }
+
+    public List<Buff> getBuffs() {
+        return buffs;
+    }
+
+    public void setBuffs(List<Buff> buffs) {
+        this.buffs = buffs;
     }
 }
